# cpp-example-ros-bridge

./: .gitignore  CMakeLists.txt  README.md  package.xml  pixi.toml  requirements.txt
rerun_bridge/: CMakeLists.txt  package.xml
rerun_bridge/include/rerun_bridge/: rerun_ros_interface.hpp
rerun_bridge/launch/: drone_example.launch  drone_example_params.yaml  example.launch  spot_example.launch  spot_example_params.yaml
rerun_bridge/src/rerun_bridge/: collection_adapters.hpp  rerun_ros_interface.cpp  visualizer_node.cpp  visualizer_node.hpp
rerun_logger/: CMakeLists.txt  package.xml
rerun_logger/launch/: example.launch
rerun_logger/src/rerun_logger/: rerun_logger_node.cpp
src/rerun_logger/: CMakeLists.txt
src/rerun_logger/launch/: example.launch
src/rerun_logger/src/: rerun_logger_node.cpp
